# uv-python-template

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: mypy.yml  pytest.yml  type.yml
tests/: test_dummy.py
